NEXT-9266 - align discount icon in basket Fixes #1046

--- a/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item.scss
@@ -21,6 +21,14 @@
 
 .cart-item-discount-icon {
     text-align: center;
+    height: 100%;
+
+    .icon {
+        height: 100%;
+        > svg {
+            top: 0;
+        }
+    }
 }
 
 .cart-item-nested-icon {
